--- a/scss/page/_orders.scss
+++ b/scss/page/_orders.scss
@@ -38,6 +38,7 @@
         }
 
         &--title {
+            display: inline-block;
             h2 {
                 font-weight: 700;
                 font-size: 15px;
