--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -63,7 +63,8 @@ textarea {
 }
 
 .select2-container {
-    width: 100% !important;
+    display: block;
+    width: unset !important;
     margin-bottom: 10px;
 }
 
